--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="#contact">Contact</a></li>
+			<li><a href="about.html">About Me</a></li>
+		</ul>
+	</nav>
 	<section>
 		<h1>Git, GitHub, and the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
