--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<nav>
 		<ul>
+			<li><a href="#resources">Resources</a></li>
 			<li><a href="#contact">Contact</a></li>
 			<li><a href="about.html">About Me</a></li>
 		</ul>
